# machotkey

./: .gitignore  .gitmodules  .nojekyll  CMakeLists.txt  LEGAL.md  LICENSE  README.md  error
.github/workflows/: docs-jekyll.yml  jekyll-gh-pages.yml
cmake/user/: CMakeLists.txt  Dependencies.cmake  Frontend.cmake  Sources.cmake  generate_embed.cmake  generate_embed.py
demo/: README.md  automation.lua  capture.lua  color.lua  config.lua  config_user.lua  geometry.lua  main.lua  manifest.json  state.lua  ui_controller.lua
demo/ui/: app.js  index.html  styles.css
demo_macro/: README.md  capture.lua  color.lua  config.lua  config_ui.lua  config_user.lua  geometry.lua  main.lua  manifest.json  regions.lua  state.lua  suite.lua  workloads.lua
demo_macro/ui/: app.js  index.html  styles.css
docs/: README.md  _config.yml  index.html  manifest.schema.json
docs/api/: index.html
docs/guide/: index.html
project/include/: app_manager.h  color_search.h  debug_config.h  dialog.h  img_utils.h  input_interface.h  ipc_protocol.h  lua_ls.h  macos_ui.h  message_queue.h  objc_utils.h  ocr.h  overlay_provider.h  sandbox_interface.h  screencapture.h  shared.h  shm.h  utils.h  webview.h
project/include/httplib/: httplib.h
project/libs/lua-5.4.8/src/: lua  luac
project/macro_project/: action_task.lua  capture.lua  color.lua  config.lua  config_ui.lua  config_user.lua  geometry.lua  main.lua  manifest.json  regions.lua  state.lua
project/macro_project/ui/: app.js  index.html  styles.css
project/prebundled-ui/: README.md
project/prebundled-ui/main/: main.html
project/prebundled-ui/main/assets/: iconv-lite-umd-BaVHqThR.js  iconv-lite-umd-CKJ5YcQL.js  index-Bzt4sMh2.js  index-e0B1SWkT.js  lsp_worker-r7qxmVFa.css  main-B3smSfju.js  main-CKnJx0qJ.css  main-Cng-q4FT.js  main-Du3mMy1c.js  main-mgH0EEaT.js  worker-BKOJEt8D.js
project/prebundled-ui/overlay/: macro_controls.html
project/prebundled-ui/overlay/assets/: macro_controls.js
project/resources/: Info.plist  machotkey.entitlements  machotkey.icns  permissions.sb
project/scripts/: generate_embed.py
project/src/: macro_runner.cpp  main.cpp
project/src/lua/: bootstrap.lua  keyboard_bridge.h  lua_engine.h  mouse_bridge.h  opencv_bridge.h  screen_bridge.h
project/src/macos/: dialog.mm  img_utils.cpp  imgui_impl_metal.mm  imgui_impl_osx.mm  lua_ls.cpp  macos_input.cpp  macos_ui.mm  macos_utils.cpp  objc_utils.mm  ocr.mm  overlay_provider.mm  screencapture.mm  webview.mm
project/src/ui-dist/assets/: main-DJrX5RU-.css
project/src/ui-dist/project/src/ui/main/: main.html
project/src/ui/main/: autocomplete.js  lsp_worker.js  main.html  main.js
project/src/ui/overlay/: macro_controls.html  macro_controls.js
project/src/ui/test/: test.html  test.js
